Actualización del proyecto

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=data.ca7oss6qu6bb.us-east-1.rds.amazonaws.com
+DB_HOST=database-1.cm3s0gio0if9.us-east-1.rds.amazonaws.com
 DB_USER=admin
 DB_PASSWORD=Kokopato8383
 DB_NAME=sistema_reportes
